# unifi-rmcp

./: .env.example  .gitattributes  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md  config.example.toml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  install.sh  manifest  release-please-config.json  server.json
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  docker-publish.yml  release-please.yml  release.yml
config/: Dockerfile
crates/unifi/: Cargo.toml
data/: unifi_internal_endpoint_models.json  unifi_internal_reference_tools.json  unifi_official_network_v10_3_58.json  upstream_mcp_network_tools_main.json
docs/: CLI.md  CONFIG.md  RUST.md  SETUP.md  expansion.md  unifi_api_coverage.md  unifi_endpoint_verification.md
docs/internal/: rmcp-auth-spike.md
docs/mcp/: ELICITATION.md
docs/sessions/: 2026-07-05-unifi-api-support.md
docs/superpowers/plans/: 2026-07-04-unifi-official-and-internal-api-support.md  2026-07-05-unifi-api-full-parity.md  2026-07-05-wiremock-api-call-tests.md
openwiki/: .last-update.json  index.md  quickstart.md
plugins/unifi/: .mcp.json
plugins/unifi/.claude-plugin/: plugin.json
plugins/unifi/.codex-plugin/: plugin.json
plugins/unifi/hooks/: hooks.json  plugin-setup.sh
plugins/unifi/skills/unifi/: SKILL.md
scripts/: install.sh
src/: actions.rs  api.rs  app.rs  capabilities.rs  cli.rs  config.rs  lib.rs  main.rs  mcp.rs  setup.rs  unifi.rs
src/actions/: hybrid.rs  internal.rs  official.rs
src/api/: http.rs  internal.rs  official.rs  path.rs
src/capabilities/: internal_network.rs  official_network.rs
src/cli/: doctor.rs
src/mcp/: rmcp_server.rs  schemas.rs  tools.rs
tests/: action_dispatch.rs  cli_parse.rs  internal_endpoint_models.rs  internal_registry.rs  live_internal_smoke.rs  live_official_smoke.rs  mcp_schema.rs  official_registry.rs  path_building.rs  setup_cli.rs  tool_dispatch.rs  verify_endpoints.rs
tests/mcporter/: test-tools.sh
xtask/: Cargo.toml
xtask/src/: endpoint_probe.rs  forbidden_strings.rs  internal_reference.rs  main.rs  official_api.rs  verify_endpoints.rs  verify_policy.rs
xtask/tests/: verify_endpoints.rs
