[workspace]
members = [".", "crates/unifi", "xtask"]
resolver = "2"

[package]
name = "unifi-rmcp"
version = "0.2.4"
edition = "2021"
rust-version = "1.86"
categories = ["command-line-utilities", "development-tools"]
keywords = ["mcp", "unifi", "ubiquiti", "networking", "rmcp"]
repository = "https://github.com/jmagar/runifi"
homepage = "https://github.com/jmagar/runifi#readme"
description = "Rust MCP server and CLI for UniFi Network controllers with REST-backed operations, auth, and plugin packaging."
autobins = false

[[bin]]
name = "runifi"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP / MCP transport
axum = "0.8"
rmcp = { version = "1.6.0", default-features = false, features = [
  "server",
  "macros",
  "transport-streamable-http-server",
  "transport-io",
] }
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
toml = "0.8"

# OAuth + JWT
lab-auth = { git = "https://github.com/jmagar/lab.git", rev = "87cec3241f9baef22335de9cc8629ebbcd8ba047", package = "lab-auth" }
url = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "cookies",
] }

# Errors
anyhow = "1"

# Paths
dirs = "5"
dotenvy = "0.15.7"
unifi = { path = "crates/unifi" }

[features]
test-support = []

[dev-dependencies]
unifi-rmcp = { path = ".", features = ["test-support"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
rmcp = { version = "1.6.0", default-features = false, features = [
  "client",
  "transport-child-process",
] }
