[package]
name = "xtask"
version = "0.2.5"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
unifi = { path = "../crates/unifi" }
unifi-rmcp = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
