[package]
name = "unifi"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
categories = ["api-bindings", "network-programming"]
keywords = ["unifi", "ubiquiti", "networking"]
repository = "https://github.com/jmagar/runifi"
homepage = "https://github.com/jmagar/runifi#readme"
description = "Core UniFi Network API helpers shared by unifi-rmcp runtime surfaces."
publish = false

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "cookies",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
